finished flights dao tests, started flights services